objects/Report_Summary__c.object
<CustomObject>
    <description>Holds the summary details of each subsection of the report.</description>
    <fields>
        <fullName>SRS_Report__c</fullName>
        <description>Report for which the summary is generated</description>
        <label>SRS Report</label>
        <referenceTo>SRS_Report__c</referenceTo>
        <relationshipLabel>Report Summary</relationshipLabel>
        <relationshipName>Report_Summary</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubSection__c</fullName>
        <label>Subsection</label>
        <picklist>
            <picklistValues>
                <fullName>1.1 Vision and approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.2 Scope of the report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.1 The social problem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.2 Solution attempts made to date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.3 The solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.1 Resources used (input)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.2 Work performed (output)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.3 Results achieved (outcome/impact)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.4 Presenting resources, work performed and results during the reporting period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5 Provisions taken for the accompanying evaluation and qualitiy assurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.6 Previous year comparison: Objectives achieved, learning experience and success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1 Planning and targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.2 Influence factors: chances and risks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1 Organisational structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.2 Introduction of the participating individuals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.3 Partnerships, cooperations and networks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1 General information about the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.2 Governance of the organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.3 Ownership structure, memberships and associated organisations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.4 Environmental and social profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.1 Bookkeeping and accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.2 Asset statement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.3 Income and expenditure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7.4 Financial situation and planning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <label>Summary</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Report Summary</label>
    <nameField>
        <label>Report_Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>